--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            
+            <ul>
+                <li><a href="">Exemplo</a></li>
+                <li><a href="">To-do</a></li>
+                <img src="./src/assets/lua.png" class="cor" onclick="trocar('#00ffff')">
+                <img src="./src/assets/sol.png" class="cor" onclick="trocar('yellow')"/>
+            </ul>
         </nav>
     </header>
     
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
