--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Projeto 9</title>
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
@@ -14,10 +13,18 @@
                 <li><a href="">Exemplo</a></li>
                 <li><a href="">To-do</a></li>
                 <img src="./src/assets/lua.png" class="cor" onclick="trocar('#00ffff')">
-                <img src="./src/assets/sol.png" class="cor" onclick="trocar('yellow')"/>
+                <img src="./src/assets/sun.png" class="cor" onclick="trocar('yellow')">
             </ul>
         </nav>
     </header>
+
+    <section id="exemplo">
+        <img src="./src/assets/pikachu.png" alt="imagem" id="image">
+    </section>
+
+    <section id="contato">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1215011219365!2d-46.65496142534234!3d-23.564079361690727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dbf9ff57%3A0x4ca8eb5c4f7ecca9!2sFIAP%20-%20Paulista!5e0!3m2!1spt-PT!2sbr!4v1714739430590!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
     
     <script src="./src/js/script.js"></script>
 </body>
